testdata/golden/sema/invalid/ret_async_payload.sg
fn main() -> nothing {
    let t = async {
        ret 1;
    };
    t;
    return nothing;
}
